# ParticleSimulator

./: .travis.yml  CMakeLists.txt  Particle.hpp  ParticleSimulation.sln  README.md  console.cpp  console.hpp  create_gource.bat  index.html  main.cpp  params.json
ParticleSimulation/: Particle.cpp  Particle.h  Particle.hpp  ParticleSimulation.vcxproj  ParticleSimulation.vcxproj.filters  ThreadPool.hpp  Utility.cpp  Utility.h  controls.cpp  controls.hpp  fragmentShader.frag  main.cpp  particle.cpp  particle.h  recordings.txt  shader.cpp  texture.hpp  vertexShader.vert
ParticleSimulation/Debug/: CL.read.1.tlog  CL.write.1.tlog  ParticleSimulation.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  vc110.idb
ParticleSimulation/Release/: CL.read.1.tlog  CL.write.1.tlog  ParticleSimulation.lastbuildstate  cl.command.1.tlog
ParticleSimulation/Shaders/: fragmentShader.frag  vertexShader.vert
ParticleSimulation/Textures/: fnt.tga  font.tga
ParticleSimulation/common/: controls.cpp  controls.hpp  shader.cpp  texture.cpp
ParticleSimulation/x64/Debug/: CL.read.1.tlog  CL.write.1.tlog  ParticleSimulation.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  vc110.idb
ParticleSimulation/x64/Release/: CL.read.1.tlog  CL.write.1.tlog  ParticleSimulation.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
TGUI/widgets/: Black.conf
cmake_modules/: FindGLEW.cmake  FindGLM.cmake  FindOpenCL.cmake  FindSFML.cmake  FindTGUI.cmake
common/: CMakeLists.txt  controls.cpp  controls.hpp  shader.cpp  texture.cpp
kernels/: update_particles.cl
opencl/: cl_particle_updater.cpp  cl_particle_updater.hpp  cl_tools.hpp  opencl.hpp
shaders/: fragmentshader.frag  vertexshader.vert
src/: app.cpp  app.hpp  main.cpp  particle.hpp  particlemanager.cpp  particlemanager.hpp  particlemanager.hpp~
src/common/: controls.cpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
src/guiconsole/: console.cpp  console.hpp  consolecommands.hpp
src/opencl/: cl_particle_updater.cpp  cl_particle_updater.hpp  cl_tools.cpp  cl_tools.hpp
stylesheets/: styles.css  styles.css~
